dev/bots/test/analyze-snippet-code-test-input/short_but_still_broken.dart
// Copyright 2014 The Flutter Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

// This file is used by ../analyze_snippet_code_test.dart, which depends on the
// precise contents (including especially the comments) of this file.

// Examples can assume:
// int x = ''; // error (invalid_assignment)

/// ```dart
/// print(x);
/// ```

/// error: empty dart block
/// ```dart
/// ```
